--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -93,7 +93,7 @@
                         <span class="input-group-btn data-dwn">
                             <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
                         </span>
-                        <input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60" data-inc="1">
+                        <input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60 data-inc="1">
                         <span class="input-group-btn data-up">
                             <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
                         </span>
@@ -129,7 +129,7 @@
 <script>
     $('.js-thermometer-refresh').click(refreshThermometer());
 
-    setTimeout(refreshThermometer);
+    setTimeout(refreshThermometer, 1000);
 
     function refreshThermometer(){
 
