--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -127,7 +127,7 @@
 
 {% block javascript %}
 <script>
-    $('.js-thermometer-refresh').click(refreshThermometer());
+    // $('.js-thermometer-refresh').click(refreshThermometer);
 
     setTimeout(refreshThermometer, 1000);
 
