--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -136,7 +136,7 @@
         $('.js-thermometer').each(function(){
 
             var id = $(this).data('id');
-            var item $(this);
+            var item = $(this);
         
             $.ajax({
                 type: "POST",
