--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -1,5 +1,40 @@
 {% extends 'master.html' %}
 
+{% block head %}
+<style>
+    .container {
+    padding-top: 40px;
+}
+
+@media ( max-width: 585px ) {
+    .input-group span.input-group-btn,.input-group input,.input-group button{
+        display: block;
+        width: 100%;
+        border-radius: 0;
+        margin: 0;
+    }
+    .input-group {
+        position: relative;
+    }
+    .input-group span.data-up{
+        position: absolute;
+        top: 0;
+    }
+    .input-group span.data-dwn{
+        position: absolute;
+        bottom: 0;
+    }
+    .form-control.text-center {
+        margin: 34px 0;
+    }
+    .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group{
+        margin-left:0;
+    }
+
+}
+</style>
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
@@ -16,7 +51,7 @@
                         <p class="text-muted">{{ pin.description }}</p>
                         <div class="pad-btm">
                             <button class="btn btn-success js-toggle" data-id="{{ pin.id }}"
-                                    data-state="{{ pin.get_state_opposite }}">Turn {{ pin.get_state|yesno:"off,no,off" }}</button>
+                                    data-state="{{ pin.get_state_opposite }}">Turn {{ pin.get_state|yesno:"on,off" }}</button>
                         </div>
                     </div>
                 </div>
@@ -25,7 +60,7 @@
 
         {% for thermometer in thermometers  %}
             <div class="col-md-6 col-lg-3">
-                <div class="panel text-center">
+                <div class="panel text-center js-thermometer" data-id="{{ thermometer.id }}">
                     <div class="panel-body">
                         <h4 class="mar-no">{{ thermometer.name }}</h4>
                         <p>{{ thermometer.description }}</p>
@@ -33,12 +68,50 @@
 
                     <div class="pad-all">
                         <h4 class="text">
-                            <i class="fa fa-thermometer-three-quarters"></i> {{ thermometer.get_temp }}&#x2103;
+                            <i class="fa fa-thermometer-three-quarters"></i> <span class="js-thermometer-temp">{{ thermometer.get_temp }}</span>&#x2103;
                         </h4>
                     </div>
                 </div>
             </div>
         {% endfor %}
+
+        <div class="col-md-6 col-lg-3">
+            <div class="panel text-center">
+                <div class="pad-all">
+
+                    <div>
+                        <h3>Manual Control</h3>
+                        {% if temp_control.manuel %}
+                            <button class="btn btn-block btn-danger js-manual" data-state="0">Off</button>
+                        {% else %}
+                            <button class="btn btn-block btn-success js-manual" data-state="1">On</button>
+                        {% endif %}
+                    </div>
+
+                    <h3>Temp</h3>
+                    <div class="input-group number-spinner">
+                        <span class="input-group-btn data-dwn">
+                            <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
+                        </span>
+                        <input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60 data-inc="1">
+                        <span class="input-group-btn data-up">
+                            <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
+                        </span>
+                    </div>
+
+                    <h3>Range</h3>
+                    <div class="input-group number-spinner">
+                        <span class="input-group-btn data-dwn">
+                            <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
+                        </span>
+                        <input type="text" class="form-control text-center js-range" value="{{ temp_control.range }}" min="1" max="10" data-inc="0.5">
+                        <span class="input-group-btn data-up">
+                            <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         {% if pins.count == 0 %}
             <div class="col-md-6 col-lg-3">
@@ -54,36 +127,36 @@
 
 {% block javascript %}
 <script>
+    setTimeout(refreshThermometer, 1000);
 
-    // $('.js-thermometer-refresh').click(refreshThermometer());
+    function refreshThermometer(){
 
-    // setTimout(refreshThermometer);
+        console.log('refreshThermometer');
 
-    // function refreshThermometer(){
+        $('.js-thermometer').each(function(){
 
-    //     $('.js-thermometer-refresh').attr('disabled', true).find('fa-refresh').addClass('fa-spin');
+            var id = $(this).data('id');
+            var item = $(this);
         
-    //     $.ajax({
-    //         type: "POST",
-    //         url: '{% url 'pin_set' %}',
-    //         dataType: "json",
-    //         data: { pin : pin, state : state, csrfmiddlewaretoken : '{{ csrf_token }}' }
-    //     }).done(function(data) {
-    //         console.log(data);
+            $.ajax({
+                type: "POST",
+                url: '{% url 'get_temp' %}',
+                dataType: "json",
+                data: { id : id, csrfmiddlewaretoken : '{{ csrf_token }}' }
+            }).done(function(data) {
+                console.log(data);
 
-    //         if(data.success){
-    //             buttonText = "Turn " + (data.state ? "On" : "Off");
-    //         } else {
-    //             alert("Oh No!! Something when wrong");
-    //         }
+                if(data.success){
+                    item.find('.js-thermometer-temp').html(data.temp);
+                    setTimeout(refreshThermometer, 1000);
+                }
 
-    //         $(button).html(buttonText).attr('disabled', false);
-    //     }).fail(function(e){
-    //         $(button).html(buttonText).attr('disabled', false);
-    //         console.log("something went wrong", e);
-    //     });
+            }).fail(function(e){
+                console.log("something went wrong", e);
+            });
 
-    // }
+        });
+    }
 
     $('.js-toggle').click(function(){
         var id = $(this).data('id');
@@ -107,7 +180,9 @@
             console.log(data);
 
             if(data.success){
-                buttonText = "Turn " + (data.state ? "off" : "on");
+                console.log(data.state);
+
+                buttonText = "Turn " + (data.state ? "on" : "off");
 
                 $(button).data('state', data.state ? 0 : 1);
             } else {
@@ -121,5 +196,83 @@
         });
     }
 
+    function update(){
+        var range = $('.js-range').val();
+        var temp = $('.js-temp').val();
+
+        $.ajax({
+            type: "POST",
+            url: '{% url 'maintain_update' %}',
+            dataType: "json",
+            data: { csrfmiddlewaretoken : '{{ csrf_token }}', range : range, temp : temp }
+        }).done(function(data) {
+            console.log(data);
+
+            if(!data.success){
+                alert("Oh No!! Something when wrong");
+            }
+        }).fail(function(e){
+            alert("Oh No!! Something when very wrong");
+        });
+    }
+
+    $('.js-temp').blur(update);
+    $('.js-range').blur(update);
+
+    $(".number-spinner button").mousedown(function () {
+        var btn = $(this);
+        inputChange(btn);
+    });
+
+    function inputChange(btn){
+        var input = btn.closest('.number-spinner').find('input');
+        btn.closest('.number-spinner').find('button').prop("disabled", false);
+        var inc = parseFloat(input.data('inc'));
+
+        if (btn.attr('data-dir') == 'up') {
+
+            if ( input.attr('max') == undefined || parseFloat(input.val()) < parseInt(input.attr('max')) ) {
+                input.val(parseFloat(input.val())+inc);
+            } else {
+                btn.prop("disabled", true);
+            }
+
+        } else {
+
+            if ( input.attr('min') == undefined || parseFloat(input.val()) > parseInt(input.attr('min')) ) {
+                input.val(parseFloat(input.val())-inc);
+            } else {
+                btn.prop("disabled", true);
+            }
+        }
+
+        update();
+    }
+
+    $('.js-manual').click(function(){
+        var state = $(this).data('state');
+
+        if(state){
+            $(this).removeClass('btn-success').addClass('btn-danger').html('Off').data('state', !state);
+        } else {
+            $(this).addClass('btn-success').removeClass('btn-danger').html('On').data('state', !state);
+        }
+
+        $.ajax({
+            type: "POST",
+            url: '{% url 'manuel_toggle' %}',
+            dataType: "json",
+            data: { csrfmiddlewaretoken : '{{ csrf_token }}', state : state }
+        }).done(function(data) {
+            console.log(data);
+
+            if(!data.success){
+                alert("Oh No!! Something when wrong");
+            }
+        }).fail(function(e){
+            alert("Oh No!! Something when very wrong");
+        });
+
+    });
 </script>
 {% endblock %}
