--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -127,7 +127,7 @@
 
 {% block javascript %}
 <script>
-    setTimeout(refreshThermometer, 1000);
+    refreshThermometer();
 
     function refreshThermometer(){
         $('.js-thermometer').each(function(){
@@ -143,7 +143,7 @@
 
                 if(data.success){
                     item.find('.js-thermometer-temp').html(data.temp);
-                    setTimeout(refreshThermometer, 1000);
+                    setTimeout(refreshThermometer, 7000);
                 }
 
             }).fail(function(e){
