--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -37,8 +37,14 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
+<div id="content-header">
+    <div id="breadcrumb">
+        <a href="/" title="Dashboard" class="current"><i class="fa fa-home"></i> Dashboard</a>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row-fluid">
 
         {% for pin in pins %}
             <div class="col-md-6 col-lg-3">
