--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -5,10 +5,10 @@
         <title>PiPool</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
-        <link rel="stylesheet" href="css/matrix-style.css" />
-        <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/matrix-style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
 
         {% block head %}
         {% endblock %}
@@ -43,9 +43,9 @@
             {% endblock %}
         </div>
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/matrix.js"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/matrix.js' %}"></script>
 
         {% block javascript %}
         {% endblock %}
