--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -8,7 +8,7 @@
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet">
         <link href="{% static 'css/matrix-style.css' %}" rel="stylesheet">
-        <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+        <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 
         {% block head %}
         {% endblock %}
