img and style fixes

--- a/PiControl/templates/pins/pins.html
+++ b/PiControl/templates/pins/pins.html
@@ -13,9 +13,9 @@
 
     <div class="quick-actions_homepage">
       <ul class="quick-actions">
-        <li class="bg_lb">
+        <!--<li class="bg_lb">-->
             <a href="{% url 'pin_create' %}" class="btn btn-success"><i class="fa fa-plus"></i> Create</a>
-        </li>
+        <!--</li>-->
       </ul>
     </div>
 
@@ -34,7 +34,8 @@
                                 <th>Name</th>
                                 <th>Description</th>
                                 <th>Pin Number</th>
-                                <th>Is thermometer</th>
+                                <th>Thermometer</th>
+                                <th></th>
                                 <th></th>
                             </tr>
                         </thead>
