--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -22,19 +22,19 @@
           <ul class="nav">
             <li  class="dropdown" id="profile-messages" ><a title="" href="#" data-toggle="dropdown" data-target="#profile-messages" class="dropdown-toggle"><i class="icon icon-user"></i>  <span class="text">Welcome {{ user.get_username }}</span><b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#"><i class="icon-user"></i> My Profile</a></li>
+                <li><a href="#"><i class="fa fa-user"></i> My Profile</a></li>
                 <li class="divider"></li>
-                <li><a href="/logout"><i class="icon-key"></i> Log Out</a></li>
+                <li><a href="/logout"><i class="fa fa-sign-out"></i> Log Out</a></li>
               </ul>
             </li>
-            <li class=""><a title="" href="/logout"><i class="icon icon-share-alt"></i> <span class="text">Logout</span></a></li>
+            <li class=""><a title="" href="/logout"><i class="fa fa-sign-out"></i> <span class="text">Logout</span></a></li>
           </ul>
         </div>
 
         <div id="sidebar"><a href="#" class="visible-phone"><i class="icon icon-home"></i> Dashboard</a>
           <ul>
-            <li class="active"><a href="/"><i class="fa fa-home"></i> <span>Dashboard</span></a> </li>
-            <li> <a href="{% url 'pins' %}"><i class="fa fa-map-pin"></i> <span>Pins</span></a> </li>
+            <li class="js-menu"><a href="/"><i class="fa fa-home"></i> <span>Dashboard</span></a> </li>
+            <li class="js-menu"> <a href="{% url 'pins' %}"><i class="fa fa-map-pin"></i> <span>Pins</span></a> </li>
           </ul>
         </div>
 
