--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -9,6 +9,7 @@
         <link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet">
         <link href="{% static 'css/matrix-style.css' %}" rel="stylesheet">
         <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+        <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
 
         {% block head %}
         {% endblock %}
