django likes it like that

--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -21,7 +21,7 @@
 
         <div id="user-nav" class="navbar navbar-inverse">
           <ul class="nav">
-            <li  class="dropdown" id="profile-messages" ><a title="" href="#" data-toggle="dropdown" data-target="#profile-messages" class="dropdown-toggle"><i class="fa fa-user"></i>  <span class="text">Welcome {% user.get_username.capitalize() %}</span><b class="caret"></b></a>
+            <li  class="dropdown" id="profile-messages" ><a title="" href="#" data-toggle="dropdown" data-target="#profile-messages" class="dropdown-toggle"><i class="fa fa-user"></i>  <span class="text">Welcome {{ user.get_username|title }}</span><b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#"><i class="fa fa-user"></i> My Profile</a></li>
                 <li class="divider"></li>
