--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -30,6 +30,12 @@
     .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group{
         margin-left:0;
     }
+    .bg_lg i {
+        font-size: 30px;
+        display: block;
+        margin: 0 auto 5px;
+        color: white;
+    }
 
 }
 </style>
@@ -39,33 +45,89 @@
 
 <div id="content-header">
     <div id="breadcrumb">
-        <a href="/" title="Dashboard" class="current"><i class="fa fa-home"></i> Dashboard</a>
+        <a href="/" title="Dashboard" class="current"><i class="fa fa-home"></i> Home</a>
     </div>
 </div>
 
 <div class="container-fluid">
-    
-    <div class="widget-box widget-plain">
-      <div class="center">
-        <ul class="stat-boxes2">
 
-            {% for thermometer in thermometers  %}
-                <li>
-                    <div class="left peity_bar_neutral js-thermometer" data-id="{{ thermometer.id }}">
-                        <span>
-                            <i class="fa fa-thermometer-three-quarters"></i> <span class="js-thermometer-temp">{{ thermometer.get_temp }}</span>&#x2103;
-                        </span>
-                    </div>
-                    <div class="right"> <strong>{{ thermometer.name }}</strong></div>
+    <div class="quick-actions_homepage">
+        <ul class="quick-actions">
+            {% if temp_control.manuel %}
+                <li class="bg_lo js-manual" data-state="0">
+                    <i class="fa fa-magic"></i><span> Manual Off</span>
                 </li>
-            {% endfor %}
+            {% else %}
+                <li class="bg_lg js-manual" data-state="1">
+                    <i class="fa fa-magic"></i><span> Manual On</span>
+                </li>
+            {% endif %}
 
-        </ul>
+            <li class="bg_ly">
+                <a href="{% url 'schedule' %}"><i class="fa fa-calendar"></i> Schedule</a>
+            </li>
+      </ul>
+    </div>
+
+
+    <!--<div class="widget-box widget-plain">-->
+      <!--<div class="center">-->
+        <!--<ul class="stat-boxes2">-->
+
+            <!--{% for thermometer in thermometers  %}-->
+                <!--<li>-->
+                    <!--<div class="left peity_bar_neutral js-thermometer" data-id="{{ thermometer.id }}">-->
+                        <!--<span>-->
+                            <!--<i class="fa fa-thermometer-three-quarters"></i> <span class="js-thermometer-temp">{{ thermometer.get_temp }}</span>&#x2103;-->
+                        <!--</span>-->
+                    <!--</div>-->
+                    <!--<div class="right"> <strong>{{ thermometer.name }}</strong></div>-->
+                <!--</li>-->
+            <!--{% endfor %}-->
+
+        <!--</ul>-->
+      <!--</div>-->
+    <!--</div>-->
+
+    <div class="row-fluid">
+      <div class="span12">
+        <div class="widget-box">
+          <div class="widget-title">
+            <h5>Temperature Control</h5>
+          </div>
+          <div class="widget-content">
+
+              <h3>Temp</h3>
+                <div class="input-group number-spinner">
+                    <span class="input-group-btn data-dwn">
+                        <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
+                    </span>
+                    <input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60" data-inc="1" disabled>
+                    <span class="input-group-btn data-up">
+                        <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
+                    </span>
+                </div>
+
+                <h3>Range</h3>
+                <div class="input-group number-spinner">
+                    <span class="input-group-btn data-dwn">
+                        <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
+                    </span>
+                    <input type="text" class="form-control text-center js-range" value="{{ temp_control.range }}" min="1" max="10" data-inc="0.5" disabled>
+                    <span class="input-group-btn data-up">
+                        <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
+                    </span>
+                </div>
+
+          </div>
       </div>
     </div>
 
 
     <div class="row-fluid">
+        <div class="span12">
+        <div class="widget-box">
+          <div class="widget-content">
 
         {% for pin in pins %}
             <div class="col-md-6 col-lg-3">
@@ -102,43 +164,6 @@
             </div>
         {% endfor %}
 
-        <div class="col-md-6 col-lg-3">
-            <div class="panel text-center">
-                <div class="pad-all">
-
-                    <div>
-                        <h3>Manual Control</h3>
-                        {% if temp_control.manuel %}
-                            <button class="btn btn-block btn-danger js-manual" data-state="0">Off</button>
-                        {% else %}
-                            <button class="btn btn-block btn-success js-manual" data-state="1">On</button>
-                        {% endif %}
-                    </div>
-
-                    <h3>Temp</h3>
-                    <div class="input-group number-spinner">
-                        <span class="input-group-btn data-dwn">
-                            <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
-                        </span>
-                        <input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60" data-inc="1" disabled>
-                        <span class="input-group-btn data-up">
-                            <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
-                        </span>
-                    </div>
-
-                    <h3>Range</h3>
-                    <div class="input-group number-spinner">
-                        <span class="input-group-btn data-dwn">
-                            <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
-                        </span>
-                        <input type="text" class="form-control text-center js-range" value="{{ temp_control.range }}" min="1" max="10" data-inc="0.5" disabled>
-                        <span class="input-group-btn data-up">
-                            <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         {% if pins.count == 0 %}
             <div class="col-md-6 col-lg-3">
@@ -268,9 +293,9 @@
         var state = $(this).data('state');
 
         if(state){
-            $(this).removeClass('btn-success').addClass('btn-danger').html('Off').data('state', !state);
+            $(this).removeClass('bg-lo').addClass('bg-lg').html(' Manual Off').data('state', !state);
         } else {
-            $(this).addClass('btn-success').removeClass('btn-danger').html('On').data('state', !state);
+            $(this).addClass('bg-lg').removeClass('bg-lo').html(' Manual On').data('state', !state);
         }
 
         $.ajax({
